--- a/ReflectoCalc/src/main/resources/application.properties
+++ b/ReflectoCalc/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/energysaver
 spring.datasource.username=wyckie
 spring.datasource.password=wycliffe
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=postgresql
